--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "bootstrap": "^4.6.0",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0.24",
+        "popper.js": "^1.16.1",
+        "postcss": "^8.3.5",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.35.1",
+        "sass-loader": "^12.1.0",
+        "vue": "^2.6.14",
+        "vue-template-compiler": "^2.6.14"
     }
 }
