--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.24",
         "popper.js": "^1.16.1",
@@ -20,6 +22,7 @@
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
         "vue": "^2.6.14",
+        "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14"
     }
 }
