Atualização nas informações relevantes ao projeto

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # php -S 127.0.0.1:8080 -t public
 
-APP_NAME="Gateway Gerencianet"
+APP_NAME="Gateway de Pagamento"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
