--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
         "vue": "^2.6.14",
+        "vue-input-facade": "^1.3.6",
         "vue-loader": "^15.9.7",
+        "vue-numeric": "^2.4.3",
         "vue-template-compiler": "^2.6.14"
     }
 }
