--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/manifest.js": "/js/manifest.js",
-    "/css/app.css": "/css/app.css",
-    "/js/vendor.js": "/js/vendor.js"
+    "/js/app.js": "/js/app.js?id=611d3a3d3bedab7cf8a5",
+    "/js/manifest.js": "/js/manifest.js?id=631e5999b43c5cafa0bf",
+    "/css/app.css": "/css/app.css?id=fc210fc7572420a41183",
+    "/js/vendor.js": "/js/vendor.js?id=c484a989f5235f01061b"
 }
