--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,28 @@
 # php -S 127.0.0.1:8080 -t public
 
-APP_NAME="Gateway de Pagamento"
+APP_NAME="Pagamentos"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8080
 
-GNET_IDENTIFIER=''
 GNET_CLIENT_ID=''
 GNET_CLIENT_SECRET=''
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=gateway_gerencianet
+DB_DATABASE=bfweb_payments
 DB_USERNAME=
 DB_PASSWORD=
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=payments.bfwebsites.com.br
+MAIL_PORT=465
 MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=suporte@projeto.com.br
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=contato@payments.bfwebsites.com.br
 MAIL_FROM_NAME="${APP_NAME}"
 
 MIX_APP_NAME="${APP_NAME}"
