--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ APP_URL=http://127.0.0.1:8080
 
 GNET_CLIENT_ID=''
 GNET_CLIENT_SECRET=''
-GNET_WEBHOOK=''
+GNET_WEBHOOK='https://www.payments.bfwebsites.com.br/api/payment/gnet/status'
+GNET_SANDBOX=true
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
