Finalizado lógica para callback via pix e transactions

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ GNET_SANDBOX=true
 GNET_CLIENT_ID=''
 GNET_CLIENT_SECRET=''
 GNET_WEBHOOK='https://www.payments.bfwebsites.com.br/api/payment/gnet/status'
+GNET_PIX_CERT='/homologacao-305206-glpets.pem'
+
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
