--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ APP_URL=http://127.0.0.1:8080
 GNET_SANDBOX=true
 GNET_CLIENT_ID=''
 GNET_CLIENT_SECRET=''
-GNET_WEBHOOK='https://www.payments.bfwebsites.com.br/api/payment/gnet/status'
-GNET_PIX_CERT='/homologacao-305206-glpets.pem'
-
+GNET_WEBHOOK=''
+GNET_PIX_CERT=''
+GNET_PIX_KEY=''
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
